--- a/index.html
+++ b/index.html
@@ -43,24 +43,24 @@
                
                 <div class="title__network">
                     <ul>
-                        <li class="title__network__item__img"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer"><img src="assets/git_ic.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer"><img src="git_ic.png"><img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer">Github</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer"><img src="assets/link_icon.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer"><img src="link_icon.png"><img src="assets\arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/inst_icon.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/inst_icon.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.instagram.com/kimberlyssb/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/cv_icono.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/cv_icono.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://drive.google.com/file/d/1ypKrsyPBBcOAoaV46yiOiQcgjCLe6zk1/view?usp=sharing" target="_blank" rel="noopener noreferrer">Curriculum</a></li>
                     </ul>
                 </div>
             </div>
-            <img class="title__profile" src="assets/leo.png">
+            <img class="title__profile" src="leo.png">
         </div>
     </section>
     
@@ -83,7 +83,7 @@
             <p class="about__paragraph">Cabe mencionar, que el <b>Programa Educativo de Oracle ONE Next Education con Alura Latam </b>, es un Programa Integral ya que no solamente busca formar en Programación y en Tecnologias como HTML, CSS y JavaScript sino que también busca formarte en <b>habiliades de liderazgo, de organización, de motivación, y para la vida diaria como son las Sofkills (habilidades blandas)</b>.</p>
 
             <!-- Si quieres, pon tú firma acá! -->
-            <img class="firma" src="assets/signature.png">
+            <img class="firma" src="signature.png">
         </div>
     </section>
 
@@ -93,42 +93,42 @@
             <div class="skills__line">
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets/html_icon.png"></li>
+                        <li class="skills__img"><img src="html_icon.png"></li>
                         <li class="skills__name"> HTML 5</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets/js_icono.png" alt=""></li>
+                        <li class="skills__img"> <img src="js_icono.png" alt=""></li>
                         <li class="skills__name">Javascript</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets/css_icon.png" alt=""> </li>
+                        <li class="skills__img"> <img src="css_icon.png" alt=""> </li>
                         <li class="skills__name">CSS 3</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\php_icon.png" alt=""></li>
+                        <li class="skills__img"> <img src="php_icon.png" alt=""></li>
                         <li class="skills__name">PHP</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"><img src="assets\nodejs_icon.png" alt=""></li>
+                        <li class="skills__img"><img src="nodejs_icon.png" alt=""></li>
                         <li class="skills__name">Node JS</li>
                     </ul>
                 </div>
 
                 <div class="skills__box">
                     <ul>
-                        <li class="skills__img"> <img src="assets\react_icon.png" alt=""> </li>
+                        <li class="skills__img"> <img src="react_icon.png" alt=""> </li>
                         <li class="skills__name">React</li>
                     </ul>
                 </div>           
@@ -142,49 +142,49 @@
             <div class="hobbies__line">
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"><img src="assets/skate_icon.png"></li>
+                        <li class="hobbies__img"><img src="skate_icon.png"></li>
                         <li class="hobbies__name">Skate</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"><img src="assets/guitar_icon.png"></li>
+                        <li class="hobbies__img"><img src="guitar_icon.png"></li>
                         <li class="hobbies__name">Guitarra Eléctrica</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"> <img src="assets/audifonos_icono.png" alt=""></li>
+                        <li class="hobbies__img"> <img src="audifonos_icono.png" alt=""></li>
                         <li class="hobbies__name">Reggae</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"> <img src="assets/celular_icon.png" alt=""> </li>
+                        <li class="hobbies__img"> <img src="celular_icon.png" alt=""> </li>
                         <li class="hobbies__name">Crear contenido</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"><img src="assets/series_icono.png" alt=""></li>
+                        <li class="hobbies__img"><img src="series_icono.png" alt=""></li>
                         <li class="hobbies__name">Ver séries</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"> <img src="assets/forkspoon_icon.png" alt=""></li>
+                        <li class="hobbies__img"> <img src="forkspoon_icon.png" alt=""></li>
                         <li class="hobbies__name">Cocinar</li>
                     </ul>
                 </div>
 
                 <div class="hobbies__box">
                     <ul class="hobbies__img__list">
-                        <li class="hobbies__img"><img src="assets/camera_icon.png"></li>
+                        <li class="hobbies__img"><img src="camera_icon.png"></li>
                         <li class="hobbies__name">Tomar fotos</li>
                     </ul>
                 </div>
@@ -198,7 +198,7 @@
             <div class="academic__courses__box">
                 <ul class="academic__courses__list">
                     <!--Pon el logotipo de la institución de formación -->
-                    <li class="academic__courses__item__img"><img src="assets\logo.png"></li>
+                    <li class="academic__courses__item__img"><img src="logo.png"></li>
                     <li class="academic__courses__item__title"><h4>Ingeniería en Sistemas Computacionales</h4></li>
                     <li class="academic__courses__item__subtitle"><p>2002 - Universidad Cuauhtémoc</p></li>
                 </ul>
@@ -207,7 +207,7 @@
         <div class="academic__courses__box">
             <ul class="academic__courses__list">
                 <!--Pon el logotipo de la institución de formación -->
-                <li class="academic__courses__item__img"><img src="assets\alura_logo.png"></li>
+                <li class="academic__courses__item__img"><img src="alura_logo.png"></li>
                 <li class="academic__courses__item__title"><h4>Formación en Front - End</h4></li>
                 <li class="academic__courses__item__subtitle"><p>2024 - Alura</p></li>
             </ul>
@@ -215,7 +215,7 @@
         <div class="academic__courses__box">
             <ul class="academic__courses__list">
                 <!-- Pon el logotipo de la institución de formación -->
-                <li class="academic__courses__item__img"><img src="assets\cisco.png"></li>
+                <li class="academic__courses__item__img"><img src="cisco.png"></li>
                 <li class="academic__courses__item__title"><h4>Cisco Certified Network Associate</h4></li>
                 <li class="academic__courses__item__subtitle"><p>2009 - Cisco Networking Academy</p></li>
             </ul>
@@ -228,7 +228,7 @@
         <h2 class="experience__section__title" >Experiencia Profesional</h2>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\numero.png">
+            <img class="experience__img" src="numero.png">
             <div class="experience__info"
                 <h2 class="experience__title">Juego del Número Secreto</h2>
                 <h3 class="experience__text">Challenge Alura Latam | Oracle</h3>
@@ -241,7 +241,7 @@
         </div>
         <div class="experiencie__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\barberia.png">
+            <img class="experience__img" src="barberia.png">
             <div class="experience__info"
                 <h2 class="experience__title">Sitio Web de una Barbería</h2>
                 <h3 class="experience__text">Challenge Alura Latam | Oracle </h3>
@@ -255,7 +255,7 @@
 
         <div class="experience__box">
             <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-            <img class="experience__img" src="assets\encriptador.png">
+            <img class="experience__img" src="encriptador.png">
             <div class="experience__info-container"
                 <h2 class="experience__title">Encriptador de texto</h2>
                 <h3 class="experience__text">Challenge Alura Latam | Oracle </h3>
@@ -288,7 +288,7 @@
             </div>
         </div>
         <div class="formcontato--esquerda">
-            <img class="formcontato__img" src="assets\contact_image.png">
+            <img class="formcontato__img" src="contact_image.png">
         </div>
     </section>
 
