--- a/index.html
+++ b/index.html
@@ -43,20 +43,20 @@
                
                 <div class="title__network">
                     <ul>
-                        <li class="title__network__item__img"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer"><img src="git_ic.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer"><img src="git_ic.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://github.com/LeonardoCamC" target="_blank" rel="noopener noreferrer">Github</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer"><img src="link_icon.png"><img src="assets\arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer"><img src="link_icon.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/inst_icon.png"><img src="arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="inst_icon.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.instagram.com/kimberlyssb/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="assets/cv_icono.png"><img src="arrow.png"></a></li>
-                        <li class="title__network__item"><a href="https://drive.google.com/file/d/1ypKrsyPBBcOAoaV46yiOiQcgjCLe6zk1/view?usp=sharing" target="_blank" rel="noopener noreferrer">Curriculum</a></li>
+                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="cv_icono.png"><img src="arrow.png"></a></li>
+                        <li class="title__network__item"><a href="https://portafolio-five-virid.vercel.app/" target="_blank" rel="noopener noreferrer">Curriculum</a></li>
                     </ul>
                 </div>
             </div>
