--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <li class="title__network__item"><a href="https://www.linkedin.com/in/leonardocamara/" target="_blank" rel="noopener noreferrer">Linkedin</a></li>
                     </ul>
                     <ul>
-                        <li class="title__network__item__img"><a href="" target="_blank" rel="noopener noreferrer"><img src="inst_icon.png"><img src="arrow.png"></a></li>
+                        <li class="title__network__item__img"><a href="https://www.instagram.com/contacto.joven7/?hl=es" target="_blank" rel="noopener noreferrer"><img src="inst_icon.png"><img src="arrow.png"></a></li>
                         <li class="title__network__item"><a href="https://www.instagram.com/contacto.joven7/?hl=es" target="_blank" rel="noopener noreferrer">Instagram</a></li>
                     </ul>
                     <ul>
